--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Venus Template</title>
+    <title>ID Check</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
@@ -17,26 +17,24 @@
   </head>
 
   <body class="is-boxed has-animations">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Sign in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Sign up</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
 
 
     <div class="body-wrap boxed-container">
@@ -63,11 +61,10 @@
           <div class="container-sm">
             <div class="hero-inner">
               <div class="hero-copy">
-                <h1 class="hero-title mt-0">Landing template for startups</h1>
-                <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up
-                  once, and get beautiful results forever.</p>
+                <h1 class="hero-title mt-0">ID Check</h1>
+                <p class="hero-paragraph">Tú te enfocas de desarrollar lo que hace único a tu negocio, mientras nosotros nos hacemos cargo de comprobar que tus usuarios son quienes dicen ser.</p>
                 <div class="hero-cta">
-                  <a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+                  <a class="button button-primary button-wide-mobile" href="#">Empezar ya</a>
                 </div>
               </div>
               <div class="mockup-container">
