--- a/templates/index.html
+++ b/templates/index.html
@@ -11,47 +11,30 @@
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
   </head>
 
   <body class="is-boxed has-animations">
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Sign in</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign up</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Entrar</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
-
     <div class="body-wrap boxed-container">
-      <header class="site-header text-light">
-        <div class="container">
-          <div class="site-header-inner">
-            <div class="brand header-brand">
-              <h1 class="m-0">
-                <a href="#">
-                  <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
-                </a>
-              </h1>
-            </div>
-          </div>
-        </div>
-      </header>
-
       <main>
         <section class="hero text-center text-light">
           <div class="hero-bg"></div>
@@ -62,7 +45,8 @@
             <div class="hero-inner">
               <div class="hero-copy">
                 <h1 class="hero-title mt-0">ID Check</h1>
-                <p class="hero-paragraph">Tú te enfocas de desarrollar lo que hace único a tu negocio, mientras nosotros nos hacemos cargo de comprobar que tus usuarios son quienes dicen ser.</p>
+                <p class="hero-paragraph">Tú te enfocas de desarrollar lo que hace único a tu negocio, mientras nosotros
+                  nos hacemos cargo de comprobar que tus usuarios realmente son quienes dicen ser.</p>
                 <div class="hero-cta">
                   <a class="button button-primary button-wide-mobile" href="#">Empezar ya</a>
                 </div>
@@ -71,7 +55,7 @@
                 <div class="mockup-bg">
                   <img src="dist/images/iphone-hero-bg.svg" alt="iPhone illustration">
                 </div>
-                <img class="device-mockup" src="dist/images/iphone-hero.png" alt="iPhone Hero">
+                <img class="device-mockup" src="dist/images/iphoneID.png" alt="iPhone Hero">
               </div>
             </div>
           </div>
@@ -90,9 +74,10 @@
                       alt="iPhone Feature 01">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-                    <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
-                      mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+                    <h3 class="mt-0 mb-16">Cada persona es única, cada huella también.</h3>
+                    <p class="m-0">Nuestro avanzado sistema de identificación de personas escanea la huella de su
+                      cliente en tiempo real y la compara con la huella plasmada en la cédula. Debido a este
+                      revolucionario enfoque, la precisión de verificación está en un nuevo nivel.</p>
                   </div>
                 </div>
                 <div class="feature-extended">
@@ -104,7 +89,7 @@
                       alt="iPhone Feature 02">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+                    <h3 class="mt-0 mb-16">Adiós Fake IDs.<br>Hola seguridad.</h3>
                     <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
                       mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
                   </div>
@@ -118,7 +103,7 @@
                       alt="iPhone Feature 03">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+                    <h3 class="mt-0 mb-16">Friendly para el usuario. Friendly para el desarrollador.</h3>
                     <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
                       mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
                   </div>
@@ -132,7 +117,7 @@
                       alt="iPhone Feature 04">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+                    <h3 class="mt-0 mb-16">Ultra. Hiper. Rápido.</h3>
                     <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
                       mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
                   </div>
@@ -152,11 +137,10 @@
             <div class="container-sm">
               <div class="cta-inner section-inner">
                 <div class="cta-header text-center">
-                  <h2 class="section-title mt-0">Stay in the know</h2>
-                  <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic
-                    elements of a document or visual presentation.</p>
+                  <h2 class="section-title mt-0">Pruébalo gratis</h2>
+                  <p class="section-paragraph">Solicita una versión de prueba de ID Check para tu aplicación.</p>
                   <div class="cta-cta">
-                    <a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+                    <a class="button button-primary button-wide-mobile" href="#">Empezar ya</a>
                   </div>
                 </div>
               </div>
@@ -173,16 +157,16 @@
               </div>
               <ul class="footer-links list-reset">
                 <li>
-                  <a href="#">Contact</a>
+                  <a href="#">Contacto</a>
                 </li>
                 <li>
-                  <a href="#">About us</a>
+                  <a href="#">Sobre nosotros</a>
                 </li>
                 <li>
                   <a href="#">FAQ's</a>
                 </li>
                 <li>
-                  <a href="#">Support</a>
+                  <a href="#">Soporte</a>
                 </li>
               </ul>
               <ul class="footer-social-links list-reset">
@@ -217,7 +201,7 @@
                   </a>
                 </li>
               </ul>
-              <div class="footer-copyright">&copy; 2018 Venus, all rights reserved</div>
+              <div class="footer-copyright">&copy; 2021 ID Check, all rights reserved</div>
             </div>
           </div>
         </div>
