--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Entrar</a>
+            <a class="nav-link active" aria-current="page" href="/signin">Entrar</a>
           </li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
                 <p class="hero-paragraph">Tú te enfocas de desarrollar lo que hace único a tu negocio, mientras nosotros
                   nos hacemos cargo de comprobar que tus usuarios realmente son quienes dicen ser.</p>
                 <div class="hero-cta">
-                  <a class="button button-primary button-wide-mobile" href="#">Empezar ya</a>
+                  <a class="button button-primary button-wide-mobile" href="/signin">Empezar ya</a>
                 </div>
               </div>
               <div class="mockup-container">
@@ -70,8 +70,7 @@
                     <div class="mockup-bg">
                       <img src="dist/images/iphone-feature-bg-01.svg" alt="iPhone Feature 01 illustration">
                     </div>
-                    <img class="device-mockup is-revealing" src="dist/images/iphone-feature-01.png"
-                      alt="iPhone Feature 01">
+                    <img class="device-mockup is-revealing" src="dist/images/huella.png" alt="iPhone Feature 01">
                   </div>
                   <div class="feature-extended-body is-revealing">
                     <h3 class="mt-0 mb-16">Cada persona es única, cada huella también.</h3>
@@ -85,13 +84,12 @@
                     <div class="mockup-bg">
                       <img src="dist/images/iphone-feature-bg-02.svg" alt="iPhone Feature 02 illustration">
                     </div>
-                    <img class="device-mockup is-revealing" src="dist/images/iphone-feature-02.png"
-                      alt="iPhone Feature 02">
+                    <img class="device-mockup is-revealing" src="dist/images/code.png" alt="iPhone Feature 02">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Adiós Fake IDs.<br>Hola seguridad.</h3>
-                    <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
-                      mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+                    <h3 class="mt-0 mb-16">Friendly para el usuario. Friendly para el desarrollador.</h3>
+                    <p class="m-0">Para los usuarios es fácil verificarse, para el desarrollador es fácil usar la
+                      librería. Tu aplicación será más rápida que la competencia.</p>
                   </div>
                 </div>
                 <div class="feature-extended">
@@ -103,9 +101,10 @@
                       alt="iPhone Feature 03">
                   </div>
                   <div class="feature-extended-body is-revealing">
-                    <h3 class="mt-0 mb-16">Friendly para el usuario. Friendly para el desarrollador.</h3>
-                    <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
-                      mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+                    <h3 class="mt-0 mb-16">Adiós Fake IDs.<br>Hola seguridad.</h3>
+                    <p class="m-0">Nuestro sistema permite verificar la identidad de un usuario de forma rápida,
+                      sencilla y 100% digital. Usamos una combinación de tecnologías de reconocimiento que hacen parte
+                      del state-of-the-art del campo. No más fraudes, nunca más.</p>
                   </div>
                 </div>
                 <div class="feature-extended">
@@ -118,8 +117,9 @@
                   </div>
                   <div class="feature-extended-body is-revealing">
                     <h3 class="mt-0 mb-16">Ultra. Hiper. Rápido.</h3>
-                    <p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in
-                      mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+                    <p class="m-0">La ciencia alimenta el núcleo de nuestro producto, y la ingeniería lo potencia. Hemos
+                      desarrollado procesos que ocultan la complejidad de nuestra solución en una simple, intuitiva y
+                      extremadamente rápida librería. No más pantallas de carga.</p>
                   </div>
                 </div>
               </div>
@@ -140,7 +140,7 @@
                   <h2 class="section-title mt-0">Pruébalo gratis</h2>
                   <p class="section-paragraph">Solicita una versión de prueba de ID Check para tu aplicación.</p>
                   <div class="cta-cta">
-                    <a class="button button-primary button-wide-mobile" href="#">Empezar ya</a>
+                    <a class="button button-primary button-wide-mobile" href="/signin">Empezar ya</a>
                   </div>
                 </div>
               </div>
