--- a/templates/index.html
+++ b/templates/index.html
@@ -97,8 +97,7 @@
                     <div class="mockup-bg">
                       <img src="dist/images/iphone-feature-bg-03.svg" alt="iPhone Feature 03 illustration">
                     </div>
-                    <img class="device-mockup is-revealing" src="dist/images/iphone-feature-03.png"
-                      alt="iPhone Feature 03">
+                    <img class="device-mockup is-revealing" src="dist/images/iphone3.png" alt="iPhone Feature 03">
                   </div>
                   <div class="feature-extended-body is-revealing">
                     <h3 class="mt-0 mb-16">Adiós Fake IDs.<br>Hola seguridad.</h3>
@@ -112,8 +111,7 @@
                     <div class="mockup-bg">
                       <img src="dist/images/iphone-feature-bg-04.svg" alt="iPhone Feature 04 illustration">
                     </div>
-                    <img class="device-mockup is-revealing" src="dist/images/iphone-feature-04.png"
-                      alt="iPhone Feature 04">
+                    <img class="device-mockup is-revealing" src="dist/images/iphone4.png" alt="iPhone Feature 04">
                   </div>
                   <div class="feature-extended-body is-revealing">
                     <h3 class="mt-0 mb-16">Ultra. Hiper. Rápido.</h3>
